build bug fix for cori
Fixed compiling bug, but regression test is still broken.

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -80,6 +80,7 @@ if (NOT EXISTS ${Z_LIBRARY})
   endif()
 
   message("Configuring zlib...")
+
   execute_process(COMMAND env CC=${CMAKE_C_COMPILER} CFLAGS=${CMAKE_C_FLAGS} ./configure ${ZLIB_CONFIG_OPTS}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/zlib
                   OUTPUT_VARIABLE zlib_config_log ERROR_VARIABLE zlib_config_err
@@ -136,7 +137,7 @@ if (NOT EXISTS ${HDF5_LIBRARY})
   else()
     execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/hdf5)
   endif()
-  set(HDF5_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR} --with-zlib=${PROJECT_BINARY_DIR})
+  set(HDF5_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR} --with-zlib=${PROJECT_BINARY_DIR} --disable-shared)
 
   execute_process(COMMAND env CC=${CMAKE_C_COMPILER} CFLAGS=${CMAKE_C_FLAGS} ./configure ${HDF5_CONFIG_OPTS}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/hdf5
@@ -232,12 +233,11 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   if (NOT stat EQUAL 0)
     message(FATAL_ERROR "Copying library source failed.")
   endif()
-
   message("Configuring netcdf-c library...")
   SET(ZLIB_INCLUDE_DIRS "${PROJECT_BINARY_DIR}/include")
   message(STATUS "${CMAKE_COMMAND} ${BETR_HDF5_LIBRARY} ${BETR_HDF5_INCLUDE_DIR} ${BETR_HDF5_HL_LIBRARY}")
 #  execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
-   execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_C_LIBRARY=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIBRARY=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DZLIB_LIBRARY=${Z_LIBRARY} -DZLIB_INCLUDE_DIRS=${Z_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
+execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_C_LIBRARY=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIBRARY=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DZLIB_LIBRARY=${Z_LIBRARY} -DZLIB_INCLUDE_DIRS=${Z_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI} 
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
                   OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
                   RESULT_VARIABLE stat)
