add two analytical solution benchark as regression tests
Now in total there are 11 regression tests. All worked well
with gnu 9.x compilers.

--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -38,3 +38,9 @@ timeout = 15 seconds
 
 [mock-ss-uniform-advection]
 timeout = 15 seconds
+
+[analytical-adr-b1]
+timeout = 15 seconds
+
+[analytical-adr-b2]
+timeout = 15 seconds
