added ecosys soil bgc var index
This brings in the first part of code
for ecosys based soil bgc. Also fixed some
minor bugs in ecacnp. All tests passed with
gnu 8.x compilers with osx.

--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(simic)
 add_subdirectory(keca)
 add_subdirectory(ch4soil)
 add_subdirectory(v1eca)
+add_subdirectory(ecosys)
 #end_appadd
 set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
