--- a/3rd-party/3rd-party.cfg
+++ b/3rd-party/3rd-party.cfg
@@ -1,6 +1,6 @@
 [pfunit]
 version = 3.3.1
-url = http://pfunit.sourceforge.net/
+url = https://github.com/jinyun1tang/pFUnit.git
 inclusion_method = git subtree
 local_modifications = no
 license = NOSA v1.3
@@ -22,10 +22,3 @@ local_modifications = no
 license = HDF5
 dependancy_for = netcdf-c
 
-[netcdf-c]
-version = v4.4.0
-url = https://github.com/jinyun1tang/netcdf-c
-inclusion_method = git subtree
-local_modifications = no
-license = netcdf
-dependancy_for = netcdf-fortran
