renamed alm files into elm
Also fixed history file write for multiple column simulations.
All tests passed with gnu 11 compilers.

--- a/src/driver/elm/CMakeLists.txt
+++ b/src/driver/elm/CMakeLists.txt
@@ -1,7 +1,7 @@
-set(BETR_DRIVER_ALM_SOURCES
-  ALMbetrNLMod.F90
+set(BETR_DRIVER_ELM_SOURCES
+  ELMbetrNLMod.F90
   calibrationType.F90
-  BeTRSimulationALM.F90
+  BeTRSimulationELM.F90
   )
 
 include_directories(${CMAKE_BINARY_DIR}/src/shr)
@@ -21,20 +21,20 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_rxns)
 include_directories(${CMAKE_BINARY_DIR}/src/driver/shared)
 
 include(add_betr_library)
-add_betr_library(betr_driver_alm ${BETR_DRIVER_ALM_SOURCES})
+add_betr_library(betr_driver_elm ${BETR_DRIVER_ELM_SOURCES})
 
 #set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -w")
 if (SBETR)
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -DSBETR")
 endif()
 
-set(BETR_LIBRARIES betr_driver_alm;${BETR_LIBRARIES} PARENT_SCOPE)
-set(BETR_LIBRARIES betr_driver_alm;${BETR_LIBRARIES})
+set(BETR_LIBRARIES betr_driver_elm;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES betr_driver_elm;${BETR_LIBRARIES})
 
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS betr_driver_alm DESTINATION lib)
+  install(TARGETS betr_driver_elm DESTINATION lib)
   file(GLOB HEADERS *.h)
-  install(FILES ${HEADERS} DESTINATION include/betr/driver/alm)
+  install(FILES ${HEADERS} DESTINATION include/betr/driver/elm)
 endif()
