--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_subdirectory(shared)
-add_subdirectory(alm)
+add_subdirectory(elm)
 add_subdirectory(clm)
 add_subdirectory(standalone)
 add_subdirectory(main)
