--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(${PROJECT_BINARY_DIR}/include)
 # Build pfunit, a fortran unit testing library.
 if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
   message("Configuring pfunit...")
-  execute_process(COMMAND cmake -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/pfunit
+  execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/pfunit
     RESULT_VARIABLE stat)
 
   if (HAVE_MPI EQUAL 1)
@@ -16,11 +16,14 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
 
   set(PFUNIT_CMAKE_OPTS
     -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}
+    -DCMAKE_INSTALL_INCLUDEDIR=${PROJECT_BINARY_DIR}/include
+    -DCMAKE_INSTALL_LIBDIR=${PROJECT_BINARY_DIR}/lib
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     -DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}
     -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}
     )
-  execute_process(COMMAND cmake
+
+  execute_process(COMMAND ${CMAKE_COMMAND}
     ${PFUNIT_CMAKE_OPTS}
     ${CMAKE_CURRENT_SOURCE_DIR}/pfunit
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/pfunit
@@ -58,6 +61,7 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
   endif()
 
 endif()
+
 add_library(pfunit STATIC IMPORTED GLOBAL)
 set_target_properties(pfunit PROPERTIES IMPORTED_LOCATION ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/3rd-party/pfunit/include/" PARENT_SCOPE)
@@ -142,8 +146,8 @@ if (NOT EXISTS ${HDF5_LIBRARY})
   else()
     set(HDF5_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR} --with-zlib=${PROJECT_BINARY_DIR} --disable-shared)
   endif()
-  execute_process(COMMAND  autoreconf --install WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/hdf5)
-  execute_process(COMMAND env CC=${CMAKE_C_COMPILER} CFLAGS=${CMAKE_C_FLAGS} ./configure ${HDF5_CONFIG_OPTS}
+  execute_process(COMMAND autoreconf -if WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/hdf5)
+  execute_process(COMMAND env CC=${CMAKE_C_COMPILER} env CFLAGS=${CMAKE_C_FLAGS} env FC=${CMAKE_Fortran_COMPILER} env CXX=${CMAKE_CXX_COMPILER}  ./configure ${HDF5_CONFIG_OPTS}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/hdf5
                   OUTPUT_VARIABLE hdf5_config_log ERROR_VARIABLE hdf5_config_err
                   RESULT_VARIABLE stat)
@@ -232,22 +236,44 @@ endif()
 set(NETCDF_LIBRARY "${PROJECT_BINARY_DIR}/lib/libnetcdf${LIB_SUFFIX}")
 if (NOT EXISTS ${NETCDF_LIBRARY})
   message("Preparing netcdf-c...")
-  execute_process(COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/netcdf-c ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
+  execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/netcdf-c ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
                   RESULT_VARIABLE stat)
   if (NOT stat EQUAL 0)
     message(FATAL_ERROR "Copying library source failed.")
   endif()
+
   message("Configuring netcdf-c library...")
   SET(ZLIB_INCLUDE_DIRS "${PROJECT_BINARY_DIR}/include")
   message(STATUS "${CMAKE_COMMAND} ${BETR_HDF5_LIBRARY} ${BETR_HDF5_INCLUDE_DIR} ${BETR_HDF5_HL_LIBRARY}")
 #  execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
-execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_C_LIBRARY=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIBRARY=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DZLIB_LIBRARY=${Z_LIBRARY} -DZLIB_INCLUDE_DIRS=${Z_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
-                  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
-                  OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
-                  RESULT_VARIABLE stat)
+  execute_process(COMMAND autoreconf -if WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c)
 
-  message("netcdf_c_config_err ${netcdf_c_config_err}")
-  message("stat ${stat}")
+  set(NETCDF_C_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR})
+  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS}  --disable-dap)
+  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS}  --disable-parallel4)
+  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS}  --enable-hdf5)
+  if(BUILD_SHARED_LIBS)
+    set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --enable-shared=yes)
+  else()
+    set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --enable-shared=no)
+  endif()
+
+  message("Netcdf-c opts: ${NETCDF_C_CONFIG_OPTS}")
+
+  message("NETCDF_CPPFLAGS: ${NETCDF_CPPFLAGS}")
+  message("NETCDF_LIBFLAGS: ${NETCDF_LIBFLAGS}")
+
+  #Original version
+  execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} 
+  -DUSE_HDF5=ON -DHDF5_C_LIBRARY=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIBRARY=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR}
+  -DZLIB_LIBRARY=${Z_LIBRARY} -DZLIB_INCLUDE_DIRS=${Z_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} 
+  -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} 
+  -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF 
+  -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
+  OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
+  RESULT_VARIABLE stat)
+
 #  message("PROJECT_BINARY_DIR = ${PROJECT_BINARY_DIR}")
 #  set(NETCDF_C_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR})
 #  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --with-hdf5=${PROJECT_BINARY_DIR})
@@ -320,6 +346,9 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   endif()
 
   message("Configuring netcdf-fortran library...")
+
+  execute_process(COMMAND autoreconf -if WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran)
+
   execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
     -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
     -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY}
