--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -36,7 +36,7 @@ add_betr_library(betr_util ${BETR_UTIL_SOURCES})
 set(BETR_LIBRARIES betr_util;${BETR_LIBRARIES} PARENT_SCOPE)
 set(BETR_LIBRARIES betr_util;${BETR_LIBRARIES})
 
-add_subdirectory(tests)
+#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
   install(TARGETS betr_util DESTINATION lib)
